Update QiyuService.java